added some links to APIs in upgrade guide

--- a/programming/javascript/upgrade-guide/7to9.md
+++ b/programming/javascript/upgrade-guide/7to9.md
@@ -9,7 +9,7 @@ permalink: /programming/javascript/upgrade-guide/7to9.html
 noTitleIndex: false
 ---
 
-# How to Upgrade Dynamsoft Barcode Reader JavaScript Edition From v7.x To v9.x 
+# How to Upgrade DBR JS From v7.x To v9.x 
 
 ## Change your license
 
