--- a/programming/javascript/upgrade-guide/8to9.md
+++ b/programming/javascript/upgrade-guide/8to9.md
@@ -8,7 +8,7 @@ pageStartVer: 8.4
 permalink: /programming/javascript/upgrade-guide/8to9.html
 ---
 
-# How to Upgrade Dynamsoft Barcode Reader JavaScript Edition from v8.x to v9.x
+# How to Upgrade DBR JS from v8.x to v9.x
 
 1. Update the version number if you are using a **CDN**:
 
