--- a/programming/javascript/upgrade-guide/9to10.md
+++ b/programming/javascript/upgrade-guide/9to10.md
@@ -7,7 +7,7 @@ needAutoGenerateSidebar: true
 permalink: /programming/javascript/upgrade-guide/9to10.html
 ---
 
-# How to Upgrade Dynamsoft Barcode Reader JavaScript Edition from v9.x to v10.x
+# How to Upgrade DBR JS from v9.x to v10.x
 
 > NOTE
 > 
@@ -15,7 +15,7 @@ permalink: /programming/javascript/upgrade-guide/9to10.html
 > 1. The `BarcodeReader` or `BarcodeScanner` instance is called `reader` or `scanner`;
 > 2. The `CaptureVisionRouter` instance is called `router`;
 > 3. The `CameraEnhancer` instance is called `cameraEnhancer`;
-> 4. The `CameraView` instance is called `cameraView`;
+> 4. The `CameraView` instance is called `cameraView`.
 
 ## Change the way to reference the SDK
 
@@ -25,8 +25,12 @@ In version 9.x, you only need one line of code:
 <script src="https://cdn.jsdelivr.net/npm/dynamsoft-javascript-barcode@9.6.31/dist/dbr.js"></script>
 ```
 
-In version 10.x, you need to reference modules individually:
-
+In version 10.x, you need to reference several modules:
+<script src="https://cdn.jsdelivr.net/npm/dynamsoft-core@3.0.20/dist/core.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/dynamsoft-utility@1.0.20/dist/utility.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/dynamsoft-barcode-reader@10.0.20/dist/dbr.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/dynamsoft-capture-vision-router@2.0.20/dist/cvr.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/dynamsoft-camera-enhancer@4.0.1/dist/dce.js"></script>
 ```html
 
 ```
@@ -55,20 +59,20 @@ The new module also added the following method:
 
 APIs for setting up the SDK have been taken over by the new classes `CaptureVisionRouter`, `CaptureVisionRouterModule` or `BarcodeReaderModule`:
 
-| API in v9.x                                                                                                    | API in v10.x                                                                                                                |
-| -------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------- |
-| `Dynamsoft.DBR.BarcodeReader.engineResourcePath` or <br> `Dynamsoft.DBR.BarcodeScanner.engineResourcePath`     | `Dynamsoft.CVR.CaptureVisionRouterModule.engineResourcePath` and <br>`Dynamsoft.DBR.BarcodeReaderModule.engineResourcePath` |
-| `Dynamsoft.DBR.BarcodeReader.loadWasm()`   or <br>`Dynamsoft.DBR.BarcodeScanner.loadWasm()`                    | `Dynamsoft.CVR.CaptureVisionRouter.preLoadModule(["dbr"])`                                                                  |
-| `Dynamsoft.DBR.BarcodeReader.isWasmLoaded()`  or <br>`Dynamsoft.DBR.BarcodeScanner.isWasmLoaded()`             | `Dynamsoft.CVR.CaptureVisionRouter.isModuleLoaded('dbr')`                                                                   |
-| `Dynamsoft.DBR.BarcodeReader.version`        or <br>`Dynamsoft.DBR.BarcodeScanner.version`                     | `Dynamsoft.DBR.BarcodeReaderModule.getVersion()`                                                                            |
-| `Dynamsoft.DBR.BarcodeReader.detectEnvironment()`    or <br>`Dynamsoft.DBR.BarcodeScanner.detectEnvironment()` | `Dynamsoft.CVR.CaptureVisionRouter.detectEnvironment()`                                                                     |
-| `Dynamsoft.DBR.BarcodeReader.onWarning`      or <br>`Dynamsoft.DBR.BarcodeScanner.onWarning`                   | `Dynamsoft.CVR.CaptureVisionRouter.onWarning` and <br>`Dynamsoft.DCE.CameraEnhancer.onWarning`                              |
-| `Dynamsoft.DBR.BarcodeReader.createInstance()`or <br>`Dynamsoft.DBR.BarcodeScanner.createInstance()`           | `Dynamsoft.CVR.CaptureVisionRouter.createInstance()`                                                                        |
+| API in v9.x                                                                                                    | API in v10.x                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
+| -------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| `Dynamsoft.DBR.BarcodeReader.engineResourcePath` or <br> `Dynamsoft.DBR.BarcodeScanner.engineResourcePath`     | [`Dynamsoft.CVR.CaptureVisionRouterModule.engineResourcePath`](https://officecn.dynamsoft.com:808/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/capture-vision-router-module.html?product=dbr&repoType=web#engineresourcepath) and <br>[`Dynamsoft.DBR.BarcodeReaderModule.engineResourcePath`](https://officecn.dynamsoft.com:808/barcode-reader/docs/web/programming/javascript/api-reference/barcode-reader-module.html#engineresourcepath)                                                                  |
+| `Dynamsoft.DBR.BarcodeReader.loadWasm()`   or <br>`Dynamsoft.DBR.BarcodeScanner.loadWasm()`                    | [`Dynamsoft.CVR.CaptureVisionRouter.preLoadModule(["dbr"])`](https://officecn.dynamsoft.com:808/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/instantiate.html?product=dbr&repoType=web#preloadmodule)                                                                                                                                                                                                                                                                                                          |
+| `Dynamsoft.DBR.BarcodeReader.isWasmLoaded()`  or <br>`Dynamsoft.DBR.BarcodeScanner.isWasmLoaded()`             | [`Dynamsoft.CVR.CaptureVisionRouter.isModuleLoaded('dbr')`](https://officecn.dynamsoft.com:808/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/instantiate.html?product=dbr&repoType=web#ismoduleloaded)                                                                                                                                                                                                                                                                                                          |
+| `Dynamsoft.DBR.BarcodeReader.version`        or <br>`Dynamsoft.DBR.BarcodeScanner.version`                     | [`Dynamsoft.DBR.BarcodeReaderModule.getVersion()`](https://officecn.dynamsoft.com:808/barcode-reader/docs/web/programming/javascript/api-reference/barcode-reader-module.html#getversion)                                                                                                                                                                                                                                                                                                                                                            |
+| `Dynamsoft.DBR.BarcodeReader.detectEnvironment()`    or <br>`Dynamsoft.DBR.BarcodeScanner.detectEnvironment()` | [`Dynamsoft.CVR.CaptureVisionRouter.detectEnvironment()`](https://officecn.dynamsoft.com:808/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/instantiate.html?product=dbr&repoType=web#detectenvironment)                                                                                                                                                                                                                                                                                                         |
+| `Dynamsoft.DBR.BarcodeReader.onWarning`      or <br>`Dynamsoft.DBR.BarcodeScanner.onWarning`                   | [`Dynamsoft.CVR.CaptureVisionRouter.onWarning`](https://officecn.dynamsoft.com:808/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/instantiate.html?product=dbr&repoType=web#onwarning) and <br>[`Dynamsoft.DCE.CameraEnhancer.onWarning`]                                                                                                                                                   (https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/instantiate.html#onwarning) |
+| `Dynamsoft.DBR.BarcodeReader.createInstance()`or <br>`Dynamsoft.DBR.BarcodeScanner.createInstance()`           | `Dynamsoft.CVR.CaptureVisionRouter.createInstance(https://officecn.dynamsoft.com:808/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/instantiate.html?product=dbr&repoType=web#createinstance)`                                                                                                                                                                                                                                                                                                                   |
 
-| API in v9.x                                                         | API in v10.x       |
-| ------------------------------------------------------------------- | ------------------ |
-| `reader.destroyContext()` or <br>`scanner.destroyContext()`         | `router.dispose()` |
-| `reader.isContextDestroyed()` or <br>`scanner.isContextDestroyed()` | `router.disposed`  |
+| API in v9.x                                                         | API in v10.x                                                                                                                                                                                  |
+| ------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| `reader.destroyContext()` or <br>`scanner.destroyContext()`         | [`router.dispose()`](https://officecn.dynamsoft.com:808/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/instantiate.html?product=dbr&repoType=web#dispose) |
+| `reader.isContextDestroyed()` or <br>`scanner.isContextDestroyed()` | [`router.disposed`](https://officecn.dynamsoft.com:808/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/instantiate.html?product=dbr&repoType=web#disposed) |
 
 
 ## Change the APIs for image processing
@@ -83,12 +87,12 @@ APIs for setting up the SDK have been taken over by the new classes `CaptureVisi
 
 | API in v9.x                                         | API in v10.x                                                                                                                                                                                                                                                                                                                                               |
 | --------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| `reader.setImageSource()`                           | `router.setInput()`                                                                                                                                                                                                                                                                                                                                        |
+| `reader.setImageSource()`                           | [`router.setInput()`](https://officecn.dynamsoft.com:808/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/multiple-file-processing.html?product=dbr&repoType=web#setinput)                                                                                                                                               |
 | `reader.onImageRead` or <br>`scanner.onFrameRead`   | `let resultReceiver = new Dynamsoft.CVR.CapturedResultReceiver()`<br>`resultReceiver.onDecodedBarcodesReceived = result => { }`<br>`router.addResultReceiver(resultReceiver)`                                                                                                                                                                              |
 | `reader.onUniqueRead` or <br>`scanner.onUniqueRead` | `let filter = new MultiFrameResultCrossFilter()`<br>`filter.enableResultDeduplication(EnumCapturedResultItemType.CRIT_BARCODE, true)`<br>`router.addResultFilter(filter)`<br>`let resultReceiver = new Dynamsoft.CVR.CapturedResultReceiver()`<br>`resultReceiver.onDecodedBarcodesReceived = result => { }`<br>`router.addResultReceiver(resultReceiver)` |
 | `reader.startScanning()` or <br>`scanner.show()`    | `let view = await Dynamsoft.DCE.CameraView.createInstance()`<br>`cameraEnhancer = await Dynamsoft.DCE.CameraEnhancer.createInstance(view)`<br>`cameraViewContainer.append(view.getUIElement())`<br>`router.setInput(cameraEnhancer)`<br>`cameraEnhancer.open()`<br>`router.startCapturing("SPECIFY-A-TEMPLATE")`                                           |
-| `reader.stopScanning()` or <br>`scanner.hide()`     | `router.stopCapturing()`<br>`cameraEnhancer.close()`<br>`cameraViewContainer.style.display = "none"`                                                                                                                                                                                                                                                       |
-| `reader.resumeScanning()`                           | `router.startCautring('SPECIFY-A-TEMPLATE')`                                                                                                                                                                                                                                                                                                               |
+| `reader.stopScanning()` or <br>`scanner.hide()`     | [`router.stopCapturing()`](https://officecn.dynamsoft.com:808/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/multiple-file-processing.html?product=dbr&repoType=web#stopcapturing)<br>`cameraEnhancer.close()`<br>`cameraViewContainer.style.display = "none"`                                                         |
+| `reader.resumeScanning()`                           | [`router.startCautring('SPECIFY-A-TEMPLATE')`](https://officecn.dynamsoft.com:808/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/multiple-file-processing.html?product=dbr&repoType=web#startcapturing)                                                                                                                |
 
 ### Process Settings
 
